Fix main title being too large on phone screens

--- a/style.css
+++ b/style.css
@@ -130,7 +130,11 @@ nav a:hover {
     color: #fde4a2;
 }
 
-@media only screen and (max-width:390px) {
+@media only screen and (max-width:393px) {
+    .game-title {
+        font-size: 40px;
+    }
+
     .game-field {
         margin: 10px 7%;
     }
@@ -175,6 +179,10 @@ nav a:hover {
 }
 
 @media only screen and (max-width:414px) {
+    .game-title {
+        font-size: 40px;
+    }
+
     .game-field {
         margin: 10px 8%;
     }
